<resources>
    <string name="app_name">NirmaanTask</string>
    <string name="upload_file_test">Upload File Test</string>
    <string name="folder_name">Folder Name</string>
    <string name="all_pdfs_will_be_displayed_here">All PDFs will be displayed here</string>
    <string name="folder">Folder :</string>
    <string name="Cancel">Cancel</string>
    <string name="choose_files">Choose Files</string>
    <string name="create_folder">Create Folder</string>
    <string name="events">Events</string>
    <string name="all_folders_will_be_displayed_here">All folders will be displayed here</string>
    <string name="delete_prompt">Do you want to delete this folder?</string>
    <string name="add_pdf_files">Add PDF files :</string>
    <string name="none">None</string>
    <string name="files_chosen">Files chosen :</string>
    <string name="pdf_name">PDF Name</string>
    <string name="confirm">Confirm</string>
    <string name="pdf_del_prompt">Do you want to delete this PDF?</string>
    <string name="you_have_not_created_any_folders_yet">You have not created any folder yet</string>
    <string name="create_one_now">Create one now!</string>
    <string name="add_files">Add Files :</string>
    <string name="upload_files">Upload Files</string>


</resources>