<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/folder"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintStart_toStartOf="@+id/guideline_1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/folderName_eT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/folder_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tv3"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="47dp"
        android:text="@string/Cancel"
        android:textSize="12sp"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toStartOf="@+id/createFolderbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fchosen" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createFolderbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="32dp"
        android:text="@string/create_folder"
        android:textSize="12sp"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/choosePdfbtn"
        app:layout_constraintTop_toBottomOf="@+id/choosePdfbtn" />

    <TextView
        android:id="@+id/addFiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_pdf_files"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintBaseline_toBaselineOf="@+id/choosePdfbtn"
        app:layout_constraintStart_toStartOf="@+id/guideline_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/choosePdfbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/choose_files"
        android:textSize="12sp"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toEndOf="@+id/addFiles"
        app:layout_constraintTop_toBottomOf="@+id/folderName_eT" />

    <TextView
        android:id="@+id/fchosen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/files_chosen"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="@+id/guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/addFiles" />

    <TextView
        android:id="@+id/none_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/none"
        app:layout_constraintEnd_toStartOf="@+id/guideline_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/fchosen" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="402dp" />
</androidx.constraintlayout.widget.ConstraintLayout>